; ModuleID = '/home/carl/AnghaBench/linux/arch/powerpc/kvm/extr_book3s_64_mmu_radix.c_kvmppc_unmap_free_pmd_entry_table.c'
source_filename = "/home/carl/AnghaBench/linux/arch/powerpc/kvm/extr_book3s_64_mmu_radix.c_kvmppc_unmap_free_pmd_entry_table.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kvm = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.kvm*, i32*, i64, i32)* @kvmppc_unmap_free_pmd_entry_table to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @kvmppc_unmap_free_pmd_entry_table(%struct.kvm* %0, i32* %1, i64 %2, i32 %3) #0 {
  %5 = alloca %struct.kvm*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  store %struct.kvm* %0, %struct.kvm** %5, align 8
  store i32* %1, i32** %6, align 8
  store i64 %2, i64* %7, align 8
  store i32 %3, i32* %8, align 4
  %10 = load i32*, i32** %6, align 8
  %11 = call i32* @pte_offset_kernel(i32* %10, i32 0)
  store i32* %11, i32** %9, align 8
  %12 = load i32*, i32** %6, align 8
  %13 = call i32 @pmd_clear(i32* %12)
  %14 = load %struct.kvm*, %struct.kvm** %5, align 8
  %15 = load i32, i32* %8, align 4
  %16 = call i32 @kvmppc_radix_flush_pwc(%struct.kvm* %14, i32 %15)
  %17 = load %struct.kvm*, %struct.kvm** %5, align 8
  %18 = load i32*, i32** %9, align 8
  %19 = load i32, i32* %8, align 4
  %20 = call i32 @kvmppc_unmap_free_pte(%struct.kvm* %17, i32* %18, i32 0, i32 %19)
  ret void
}

declare dso_local i32* @pte_offset_kernel(i32*, i32) #1

declare dso_local i32 @pmd_clear(i32*) #1

declare dso_local i32 @kvmppc_radix_flush_pwc(%struct.kvm*, i32) #1

declare dso_local i32 @kvmppc_unmap_free_pte(%struct.kvm*, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
